--- a/Space_Out/app/src/main/res/values-ko-rKR/strings.xml
+++ b/Space_Out/app/src/main/res/values-ko-rKR/strings.xml
@@ -27,4 +27,5 @@
     <string name="heart">심장박동</string>
     <string name="scissor">가위</string>
     <string name="subtitle">자연의 소리로 힐링하세요</string>
+    <string name="notificationtext">힐링 마인드 앱이 실행 중입니다</string>
 </resources>
